--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.1",
