--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@reduxjs/toolkit": "^1.8.1",
+    "@tailwindcss/cli": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.18",
     "bootstrap": "^5.3.8",
     "bootstrap-social": "^5.1.1",
     "cra-template-redux": "2.0.0",
@@ -24,6 +26,7 @@
     "react-spring": "^9.4.5-beta.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "tailwindcss": "^4.1.18",
     "typeface-lobster": "^1.1.13",
     "typeface-open-sans": "^1.1.13"
   },
